--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "show": false
   },
   "scripts": {
-    "rebuild": "cd node_modules/robotjs && nw-gyp configure --version=0.12.3 && nw-gyp build"
+    "rebuild": "cd node_modules/robotjs && nw-gyp configure --target=0.12.3 && nw-gyp build"
   },
   "dependencies": {
     "node-uuid": "^1.4.7"
