--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "rebuild": "cd node_modules/robotjs && nw-gyp configure --target=0.12.3 && nw-gyp build"
   },
   "dependencies": {
-    "node-uuid": "^1.4.7"
+    "node-uuid": "^1.4.7",
+    "vkey": "^1.0.0"
   },
   "optionalDependencies": {
     "robotjs": "^0.3.7"
