+ 添加readme + 添加host/port指定 * url协议 file: => app:

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nw-remote",
-  "main": "src/main.html",
+  "main": "app://nw-remote/src/main.html",
   "window": {
     "show": false
   },
